--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "axios": "^0.21.1",
+    "recharts": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
