--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "API_KEY": "O85KXV1A5785LFJK",
+    "API_KEY": "XXXXXXXXXXXX",
     "BASE_URL": "https://www.alphavantage.co/",
     "PERCENTAGE_OF_VOLUME":2,
     "PERCENTAGE_OF_PRICE":2
